[gd_scene load_steps=2 format=3 uid="uid://mnroyy76mepy"]

[ext_resource type="Script" path="res://gui_panel.gd" id="1_2jryq"]

[node name="gui_panel" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -202.0
offset_bottom = 100.0
grow_horizontal = 0
script = ExtResource("1_2jryq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -297.0
offset_top = 10.0
offset_right = -9.0
offset_bottom = 100.0
grow_horizontal = 0

[node name="Size" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -181.0
offset_top = 9.0
offset_right = -7.0
offset_bottom = 40.0
grow_horizontal = 0
min_value = 1.0
max_value = 10.0
step = 0.5
value = 4.0
alignment = 1
custom_arrow_step = 0.5

[node name="Resolution" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -181.0
offset_top = 46.0
offset_right = -7.0
offset_bottom = 77.0
grow_horizontal = 0
min_value = 1.0
max_value = 64.0
value = 1.0
alignment = 1
custom_arrow_step = 1.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -303.0
offset_top = 13.0
offset_right = -191.0
offset_bottom = 36.0
grow_horizontal = 0
text = "Size:"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -304.0
offset_top = 49.0
offset_right = -192.0
offset_bottom = 75.0
grow_horizontal = 0
text = "Resolution:"
horizontal_alignment = 2

[connection signal="changed" from="Panel/Size" to="." method="_on_value_changed"]
[connection signal="value_changed" from="Panel/Size" to="." method="_on_value_changed_num"]
[connection signal="changed" from="Panel/Resolution" to="." method="_on_value_changed"]
[connection signal="value_changed" from="Panel/Resolution" to="." method="_on_value_changed_num"]
